--- a/index.html
+++ b/index.html
@@ -4,10 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
     <title>Destination Page</title>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=Crimson+Text&family=PT+Sans&display=swap" rel="stylesheet">
+
+    <!-- reset Css -->
+    <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+
+    <!-- Bootstrap css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    
+    <!-- My css -->
+    <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
-    <h1>My Favorite Destinations</h1>
+    <header>
+    <h1>Discover Your Next Vacation Destination</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum omnis at illo porro, nesciunt error illum eum maxime tenetur adipisci qui necessitatibus itaque sequi facere iure assumenda sit perferendis provident! </p>
+</header>
+    <main>
+        <article class="with_border" id="left_article">Left Article</article>
+        <article class="with_border" id="right_article">
+        <h3 class="with_border">Enter Destinations details</h3>
+        <section class="with_border" id="cards_container"></section>
+    </article>
+    </main>
 </body>
 </html>
+
+
+
